Modernize syntax
Signed-off-by: Matt Sicker <mattsicker@apache.org>